@@ -1,33 +1,37 @@
 package com.myblog.service;
 
-import com.myblog.dao.CommentDao;
-import com.myblog.dto.CreateCommentRequest;
-import com.myblog.dto.UpdateCommentRequest;
-import com.myblog.model.Comment;
-import com.myblog.service.impl.CommentServiceImpl;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import com.myblog.dto.CreateCommentRequest;
+import com.myblog.dto.UpdateCommentRequest;
+import com.myblog.model.Comment;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 
-@ExtendWith(MockitoExtension.class)
+import com.myblog.MyBlogApplication;
+import com.myblog.dao.CommentDao;
+
+@SpringBootTest(classes = MyBlogApplication.class)
 class CommentServiceTest {
 
-    @Mock
+    @MockBean
     private CommentDao commentDao;
 
-    @InjectMocks
-    private CommentServiceImpl commentService;
+    @Autowired
+    private CommentService commentService;
 
     private Comment testComment;
 
@@ -40,103 +44,52 @@ class CommentServiceTest {
     }
 
     @Test
-    void testGetCommentsByPostId() {
-        // Given
-        List<Comment> comments = Arrays.asList(testComment);
-        when(commentDao.findByPostId(1L)).thenReturn(comments);
+    void getCommentsByPostIdReturnsComments() {
+        when(commentDao.findByPostId(1L)).thenReturn(List.of(testComment));
 
-        // When
         List<Comment> result = commentService.getCommentsByPostId(1L);
 
-        // Then
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals(testComment.getId(), result.get(0).getId());
-        
         verify(commentDao).findByPostId(1L);
     }
 
     @Test
-    void testGetCommentById() {
-        // Given
+    void getCommentByIdReturnsEntity() {
         when(commentDao.findById(1L)).thenReturn(Optional.of(testComment));
 
-        // When
         Optional<Comment> result = commentService.getCommentById(1L);
 
-        // Then
         assertTrue(result.isPresent());
         assertEquals(testComment.getId(), result.get().getId());
-        
         verify(commentDao).findById(1L);
     }
 
     @Test
-    void testCreateComment() {
-        // Given
+    void createCommentDelegatesToDao() {
         CreateCommentRequest request = new CreateCommentRequest();
         request.setText("New comment");
         request.setPostId(1L);
-        
+
         when(commentDao.create(any(Comment.class))).thenReturn(testComment);
 
-        // When
         Comment result = commentService.createComment(request);
 
-        // Then
-        assertNotNull(result);
         assertEquals(testComment.getId(), result.getId());
-        
         verify(commentDao).create(any(Comment.class));
     }
 
     @Test
-    void testUpdateComment() {
-        // Given
+    void updateCommentThrowsWhenEntityMissing() {
         UpdateCommentRequest request = new UpdateCommentRequest();
-        request.setId(1L);
         request.setText("Updated comment");
         request.setPostId(1L);
-        
-        when(commentDao.findById(1L)).thenReturn(Optional.of(testComment));
-        when(commentDao.update(any(Comment.class))).thenReturn(testComment);
 
-        // When
-        Comment result = commentService.updateComment(1L, request);
-
-        // Then
-        assertNotNull(result);
-        
-        verify(commentDao).findById(1L);
-        verify(commentDao).update(any(Comment.class));
-    }
-
-    @Test
-    void testUpdateCommentNotFound() {
-        // Given
-        UpdateCommentRequest request = new UpdateCommentRequest();
-        request.setId(999L);
-        request.setText("Updated comment");
-        request.setPostId(1L);
-        
         when(commentDao.findById(999L)).thenReturn(Optional.empty());
 
-        // When & Then
-        assertThrows(IllegalArgumentException.class, () -> {
-            commentService.updateComment(999L, request);
-        });
-        
+        assertThrows(IllegalArgumentException.class, () -> commentService.updateComment(999L, request));
         verify(commentDao).findById(999L);
         verify(commentDao, never()).update(any(Comment.class));
     }
-
-    @Test
-    void testDeleteComment() {
-        // When
-        commentService.deleteComment(1L);
-
-        // Then
-        verify(commentDao).delete(1L);
-    }
 }
-
